# hclib

./: .gitignore  CMakeLists.txt  Makefile.am
inc/: aaa.cpp  aaa.h  aaa_c_connector.cpp  aaa_c_connector.h  hclib-async.h  hclib-promise.h  hclib-rt.h  hclib-task.h  hclib.h  hclib_promise.h
inc/hclib-mak/: hclib.mak
instrumentation/: CMakeLists.txt  inst.sh  install-inst.sh  test.cpp
instrumentation/benchmark/common/: make.inc
instrumentation/benchmark/fib/: Makefile  fib.cpp  run.sh
instrumentation/benchmark/health/: Makefile  health.cpp  health.h  run.sh
instrumentation/benchmark/matmul/: Makefile  matmul.cpp  run.sh
instrumentation/benchmark/nqueens/: Makefile  nqueens-app-desc.h  nqueens.cpp  run.sh  serial-app.h
instrumentation/benchmark/poisson/: Makefile  poisson.cpp  run.sh
instrumentation/benchmark/sort/: Makefile  run.sh  sort.cpp
instrumentation/benchmark/sparselu/: Makefile  run.sh  sparselu.cpp
instrumentation/benchmark/strassen/: Makefile  run.sh  strassen.cpp
instrumentation/src/: CMakeLists.txt  check.cpp  ds_dpst.cpp  ds_dpst.h  ds_to_hclib.cpp  ds_to_hclib.h  instrumentation.cpp  instrumentation.h  mem_access.cpp  mem_access.h  shadow_memory.cpp  shadow_memory.h  struct_def.h
mixuse/: CMakeLists.txt  aaa.cpp  aaa_c_connector.h  c_aaa
src/: CMakeLists.txt  ds  hclib-promise.c  hclib-runtime.c  hclib.c
src/inc/: disjoint_set  hclib-finish.h  litectx.h
src/mixuse/: CMakeLists.txt  aaa.cpp  aaa.h  aaa_c_connector.cpp  main.c
test/cholesky/: cholesky.cpp  run.sh
test/performance-regression/full-apps/kastors-1.1/jacobi/: Makefile
test/performance-regression/full-apps/rodinia/bfs/: Makefile  bfs.cpp
test/performance-regression/full-apps/rodinia/heartwall/: Makefile  main.c
test/performance-regression/full-apps/rodinia/streamcluster/: Makefile
test/smithwaterman/: Makefile  make_exe.sh  run.sh  smith_waterman.cpp
tutorial/hipc18/: promises.tar
tutorial/hipc18/cpp/asyncfinish/: app-desc.h  arraysum  arraysum.cpp  fib  fib.cpp  health.cpp  make_exe.sh  medium.input  run.sh
tutorial/hipc18/cpp/bots/: app-desc.h  make_exe.sh  run.sh  sort.cpp
tutorial/hipc18/cpp/ddt/: Makefile  fib  graph  smith_waterman.cpp  sw
tutorial/hipc18/cpp/futures/: Makefile  fib  finish_dpst  finish_dpst.cpp  finish_run.sh  graph  graph.cpp  run.sh  yield.cpp
tutorial/hipc18/cpp/general/: Makefile  fib  fib.cpp  finish_demo  finish_demo.cpp  graph_promise  graph_promise.cpp  matmul_future  matmul_future.cpp  sort  sort.cpp  strassen  strassen_future.cpp  strassen_gfg.cpp  strassen_new.cpp
tutorial/hipc18/cpp/infrastructre_test/: life.cpp  life_promise.cpp  make_exe.sh  run.sh  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  update_test.cpp
tutorial/hipc18/cpp/kastors/: make_exe.sh  poisson-task.cpp  poisson.h  run.sh  sparselu.cpp  sparselu.h  strassen.cpp
tutorial/hipc18/cpp/mixuse/: Makefile  aaa.cpp  aaa.h  aaa_c_connector.cpp  aaa_c_connector.h  build.sh  c_aaa  hclib-ds.cpp  hclib-ds.h  main.c
tutorial/hipc18/cpp/project/: Makefile  app-desc.h  failed_case  failed_case.cpp  fib  fib.cpp  knapsack-012.input  knapsack-020.input  knapsack-024.input  knapsack-032.input  knapsack-036.input  knapsack-040.input  knapsack-128.input  knapsack-par.cpp  knapsack.cpp  make_exe.sh  matmul_promise  matmul_promise.cpp  non_serial_project  non_serial_project.cpp  non_serial_project2  non_serial_project2.cpp  nqueens-par.cpp  nqueens.cpp  randomized  randomized.cpp  run.sh  sort  sort_finish.cpp  sort_promise.cpp
tutorial/hipc18/cpp/promise/: Channel.h  ChannelReader.cpp  Makefile  break_main.cpp  cd  channelReader  cholesky_deadlock.cpp  graph  graph.cpp  promise_yield.cpp  void_promise.cpp
tutorial/hipc18/experiments/: Makefile  data.dict  data.tex  experiment.sh  ingest_logs.pl
tutorial/hipc18/experiments/data/: sw_large1.txt  sw_large2.txt
tutorial/hipc18/java/: AnnotatedTask.java  Barrier.java  Channel.java  ChannelReader.java  CheckedCompletableFuture.java  Config.java  CurrentTask.java  IPromiseCollection.java  OwnershipTrackingExecutor.java  PromiseCollection.java  PromiseException.java  Test.java  Test1.java  TestConway.java  TestHeat.java  TestQSort.java  TestRandomized.java  TestSieve.java  TestSmithWaterman.java  TestStrassen.java  TestStreamCluster.java  TestStreamCluster2.java
